<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Twix Studio</string>
    <string name="cancel_button">Cancel</string>
    <string name="rename">Rename</string>
    <string name="rename_objects">Rename Objects</string>
    <string name="rename_program">Rename Program</string>
    <string name="delete">Delete</string>
    <string name="menu_item_move_down">Move down</string>
    <string name="menu_item_move_up">Move up</string>
    <string name="menu_item_move_to_top">Move to top</string>
    <string name="menu_item_move_to_bottom">Move to bottom</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="move">Move</string>
    <string name="backpack_add">Add to backpack</string>
    <string name="backpack">Backpack</string>
    <string name="packing">Pack</string>
    <string name="unpack">Unpack</string>
    <string name="unpack_keep">Unpack and keep</string>
    <string name="copy_addition">copy</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading…</string>
    <string name="loading_check_token">Token is checked on our server…</string>
    <string name="loading_check_facebook_data">Facebook data is retrieved…</string>
    <string name="loading_check_email">E-Mail availability is checked on our server…</string>
    <string name="loading_check_oauth_token">OAuth token is checked on our server…</string>
    <string name="loading_check_facebook_token_validity">Facebook token validity is checked on our server&#8230;</string>
    <string name="loading_check_oauth_username">Username availability is checked on our server&#8230;</string>
    <string name="loading_facebook_exchange_token">Facebook token is exchanged on our server&#8230;</string>
    <string name="loading_facebook_login">Facebook login is completed on our server&#8230;</string>
    <string name="loading_google_exchange_code">Google+ code is exchanged on our server&#8230;</string>
    <string name="loading_google_login">Google+ login is completed on our server&#8230;</string>
    <string name="background">Background</string>
    <string name="stage">Stage</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="name_exists">Name already exists</string>
    <string name="no_name">No name</string>
    <string name="is_empty">is empty</string>
    <string name="new_group">New group</string>
    <string name="my_group">My group</string>
    <string name="name">Name:</string>
    <string name="nothing_to_copy">Nothing to copy</string>
    <string name="nothing_to_backpack_and_unpack">Nothing to backpack and unpack</string>
    <string name="nothing_to_unpack">Nothing to unpack</string>
    <string name="nothing_to_delete">Nothing to delete</string>
    <string name="nothing_to_rename">Nothing to rename</string>
    <string name="unpack_background">Program\'s background will be replaced</string>
    <string name="main_menu_new">New</string>
    <string name="main_menu_continue">Continue</string>
    <string name="main_menu_programs">Programs</string>
    <string name="main_menu_help">Help</string>
    <string name="main_menu_web">Explore</string>
    <string name="main_menu_upload">Upload</string>
    <string name="main_menu_about_pocketcode">About Pocket Code</string>
    <string name="main_menu_terms_of_use">Terms of use</string>
    <string name="main_menu_rate_app">Rate us!</string>
    <string name="main_menu_play_store_not_installed">Play Store app not found</string>
    <string name="main_menu_logout">Logout</string>
    <string name="main_menu_login">Login</string>
    <string name="logout_successful">Logout successful</string>
    <string name="preference_title">Settings</string>
    <string name="preference_title_enable_quadcopter_bricks">Parrot AR.Drone bricks</string>
    <string name="preference_description_quadcopter_bricks">Allow to control ARDrone 2.0 quadcopters</string>
    <string name="preference_title_enable_mindstorms_nxt_bricks">Lego Mindstorms NXT bricks</string>
    <string name="preference_description_mindstorms_nxt_bricks">Allow to control Lego Mindstorms NXT robots</string>
    <string name="preference_title_mindstorms_nxt_sensors">Lego NXT sensors</string>
    <string name="preference_title_drone_config_properties">Drone configuration properties</string>
    <string name="preference_title_enable_phiro_bricks">Phiro bricks</string>
    <string name="preference_description_phiro_bricks">Allow to control Phiro robots</string>
    <string name="preference_title_enable_arduino_bricks">Arduino bricks</string>
    <string name="preference_title_enable_nfc_bricks">Near Field Communication</string>
    <string name="preference_description_nfc_bricks">Allow to use NFC tags in programs</string>
    <string name="preference_title_enable_time_24">Time format 24h</string>
    <string name="preference_description_time_24">Change the format of the time</string>
    <string name="preference_description_arduino_bricks">Allow to control Arduino boards</string>
    <string name="preference_title_enable_raspi_bricks">Raspberry Pi bricks</string>
    <string name="preference_description_raspi_bricks">Allow to control Raspberry Pi computers</string>
    <string name="preference_raspi_enable_bricks">Enable Raspberry Pi bricks</string>
    <string name="preference_raspi_help">Help / Getting started</string>
    <string name="preference_raspi_help_summary">Get help on how to configure the connection settings</string>
    <string name="preference_raspi_host">Raspberry Pi IP-/Host-Address</string>
    <string name="preference_raspi_port">Raspberry Pi Port</string>
    <string name="dialog_new_object_pocketpaint">Draw image</string>
    <string name="dialog_new_object_gallery">Select image</string>
    <string name="dialog_new_object_camera">Take picture</string>
    <string name="dialog_new_object_look_preview">look preview</string>
    <string name="dialog_new_object_name">Object name</string>
    <string name="dialog_new_object_switch_title">New object created</string>
    <string name="dialog_new_object_switch_message">Switch to new object?</string>
    <string name="dialog_terms_of_use_title">Terms of use</string>
    <string name="dialog_terms_of_use_info">In order to 
    be allowed to use Pocket Code and other executables offered by the Catrobat project, you 
    must agree to our Terms of Use and strictly follow them when you use Pocket 
    Code and our other executables. Please see the link below for their precise formulation.\n</string>
    <string name="dialog_terms_of_use_link_text">Terms of Use</string>
    <string name="dialog_terms_of_use_link_text_parrot_reminder">Pocket Code terms of use</string>
    <string name="dialog_terms_of_use_parrot_reminder_text">You attempt to use Pocket Code together with Parrot\'s
        AR.Drone. We strongly remind you to abide to Parrot\'s terms of use for the drone and to Catrobat\'s terms of
        use for Pocket Code.</string>
    <string name="dialog_terms_of_use_parrot_reminder_do_not_remind_again">Do not remind me again.</string>
    <string name="dialog_about_title">About Pocket Code</string>
    <string name="dialog_about_license_info">Pocket Code is a programming 
        environment and interpreter for Android devices for the visual 
        programming language Catrobat.\n\n
        The source code of Pocket Code is mainly licensed under the GNU AGPL v3 License. 
        For further details on the license see the link below.\n</string>
    <string name="dialog_about_pocketcode_license_link_text">Pocket Code Source Code License</string>
    <string name="dialog_about_catrobat_link_text">About Catrobat</string>
    <string name="project_name">Program:</string>
    <string name="my_projects_activity_title">Programs</string>
    <string name="number_of_scripts">Scripts:</string>
    <string name="number_of_bricks">Bricks:</string>
    <string name="number_of_looks">Looks:</string>
    <string name="number_of_sounds">Sounds:</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
    <string name="insert_below">Insert below</string>
    <string name="sprite">Object</string>
    <string name="sprites">Objects</string>
    <string name="spritelist_background_headline">Background</string>
    <string name="dialog_confirm_delete_object_title">Delete this Object?</string>
    <string name="dialog_confirm_delete_multiple_objects_title">Delete these Objects?</string>
    <string name="dialog_confirm_delete_object_message">This cannot be undone!</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="copy_sprite_name_suffix">_Copy</string>
    <string name="scripts">Scripts</string>
    <string name="look">Look</string>
    <string name="looks">Looks</string>
    <string name="sounds">Sounds</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="size">Size:</string>
    <string name="script_group">Script Group</string>
    <string name="script_groups">Script Groups</string>
    <string name="choose_the_font">Choose the Font Type:</string>
    <string name="Tahoma">Tahoma</string>
    <string name="Default">Default</string>
    <string name="DroidSans">DroidSans</string>
    <string name="Simplified">Simplified Arabic</string>
    <string name="Arial">Arial</string>
    <string name="Andalus">Andalus</string>
    <string name="Meiryo">Meiryo</string>
    <string name="HelveticaNeueLT">HelveticaNeueLT</string>
    <string name="Times">Times New Roman</string>
    <string name="Bell">Bell MT</string>
    <string name="arabic">Arabic</string>
    <string name="bosnian">Bosnian</string>
    <string name="danish">Danish</string>
    <string name="german">German</string>
    <string name="english_Raute">English(Raute)</string>
    <string name="english_Canada">English(Canada)</string>
    <string name="english_United_Kingdom">English(United Kingdom)</string>
    <string name="spanish">Spanish</string>
    <string name="farsi">Farsi</string>
    <string name="french">French</string>
    <string name="gujarati">Gujarati</string>
    <string name="hindi">Hindi</string>
    <string name="croatian">Croatian</string>
    <string name="hungarian">Hungarian</string>
    <string name="indonesian">Indonesian</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="macedonian">Macedonian</string>
    <string name="malay">Malay</string>
    <string name="dutch_Netherlands">Dutch(Netherlands)</string>
    <string name="norwegian">Norwegian</string>
    <string name="polish">Polish</string>
    <string name="pashto">Pashto</string>
    <string name="portuguese">Portuguese</string>
    <string name="portuguese_Brazil">Portuguese(Brazil)</string>
    <string name="romanian">Romanian</string>
    <string name="russian">Russian</string>
    <string name="sindhi">Sindhi</string>
    <string name="slovenian">Slovenian</string>
    <string name="serbian_rCS">Serbian(rCS)</string>
    <string name="Serbian_rSP">Serbian(rSP)</string>
    <string name="swedish">Swedish</string>
    <string name="tamil">Tamil</string>
    <string name="telugu">Telugu</string>
    <string name="thai">Thai</string>
    <string name="turkish">Turkish</string>
    <string name="urdu">Urdu</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="chinese_rCN">Chinese(rCN)</string>
    <string name="chinese_rTW">Chinese(rTW)</string>
    <string name="choose_the_language">Choose the Language :</string>
</resources>