<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/languages_TextView"
        android:layoutDirection="locale"
        android:textSize="@dimen/language"
        android:text="@string/choose_the_language"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="locale"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ar"
            android:text="@string/arabic"
            android:layoutDirection="locale"
            android:textSize="@dimen/lang_font"
            android:onClick="ln_ar"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bs"
            android:textSize="@dimen/lang_font"
            android:text="@string/bosnian"
            android:layoutDirection="locale"
            android:onClick="ln_bs"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/da"
            android:textSize="@dimen/lang_font"
            android:text="@string/danish"
            android:layoutDirection="locale"
            android:onClick="ln_da"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/de"
            android:textSize="@dimen/lang_font"
            android:text="@string/german"
            android:layoutDirection="locale"
            android:onClick="ln_de"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/en_rau"
            android:textSize="@dimen/lang_font"
            android:text="@string/english_Raute"
            android:layoutDirection="locale"
            android:onClick="ln_enrau"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/en_rca"
            android:textSize="@dimen/lang_font"
            android:text="@string/english_Canada"
            android:layoutDirection="locale"
            android:onClick="ln_enrca"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/en_rgb"
            android:textSize="@dimen/lang_font"
            android:text="@string/english_United_Kingdom"
            android:layoutDirection="locale"
            android:onClick="ln_enrgb"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/es"
            android:textSize="@dimen/lang_font"
            android:text="@string/spanish"
            android:layoutDirection="locale"
            android:onClick="ln_es"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fa"
            android:textSize="@dimen/lang_font"
            android:text="@string/farsi"
            android:layoutDirection="locale"
            android:onClick="ln_fa"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fr"
            android:textSize="@dimen/lang_font"
            android:text="@string/french"
            android:layoutDirection="locale"
            android:onClick="ln_fr"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gu"
            android:textSize="@dimen/lang_font"
            android:text="@string/gujarati"
            android:layoutDirection="locale"
            android:onClick="ln_gu"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hi"
            android:textSize="@dimen/lang_font"
            android:text="@string/hindi"
            android:layoutDirection="locale"
            android:onClick="ln_hi"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hr"
            android:textSize="@dimen/lang_font"
            android:text="@string/croatian"
            android:layoutDirection="locale"
            android:onClick="ln_hr"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hu"
            android:textSize="@dimen/lang_font"
            android:text="@string/hungarian"
            android:layoutDirection="locale"
            android:onClick="ln_hu"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in"
            android:textSize="@dimen/lang_font"
            android:text="@string/indonesian"
            android:layoutDirection="locale"
            android:onClick="ln_in"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/it"
            android:textSize="@dimen/lang_font"
            android:text="@string/italian"
            android:layoutDirection="locale"
            android:onClick="ln_it"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ja"
            android:textSize="@dimen/lang_font"
            android:text="@string/japanese"
            android:layoutDirection="locale"
            android:onClick="ln_ja"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ko"
            android:textSize="@dimen/lang_font"
            android:text="@string/korean"
            android:layoutDirection="locale"
            android:onClick="ln_ko"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mk"
            android:textSize="@dimen/lang_font"
            android:text="@string/macedonian"
            android:layoutDirection="locale"
            android:onClick="ln_mk"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ms"
            android:textSize="@dimen/lang_font"
            android:text="@string/malay"
            android:layoutDirection="locale"
            android:onClick="ln_ms"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nl"
            android:textSize="@dimen/lang_font"
            android:text="@string/dutch_Netherlands"
            android:layoutDirection="locale"
            android:onClick="ln_nl"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no"
            android:textSize="@dimen/lang_font"
            android:text="@string/norwegian"
            android:layoutDirection="locale"
            android:onClick="ln_no"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pl"
            android:textSize="@dimen/lang_font"
            android:text="@string/polish"
            android:layoutDirection="locale"
            android:onClick="ln_pl"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ps"
            android:textSize="@dimen/lang_font"
            android:text="@string/pashto"
            android:layoutDirection="locale"
            android:onClick="ln_ps"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pt"
            android:textSize="@dimen/lang_font"
            android:text="@string/portuguese"
            android:layoutDirection="locale"
            android:onClick="ln_pt"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pt_rbr"
            android:textSize="@dimen/lang_font"
            android:text="@string/portuguese_Brazil"
            android:layoutDirection="locale"
            android:onClick="ln_ptrbr"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ro"
            android:textSize="@dimen/lang_font"
            android:text="@string/romanian"
            android:layoutDirection="locale"
            android:onClick="ln_ro"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ru"
            android:textSize="@dimen/lang_font"
            android:text="@string/russian"
            android:layoutDirection="locale"
            android:onClick="ln_ru"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sd"
            android:textSize="@dimen/lang_font"
            android:text="@string/sindhi"
            android:layoutDirection="locale"
            android:onClick="ln_sd"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sl"
            android:textSize="@dimen/lang_font"
            android:text="@string/slovenian"
            android:layoutDirection="locale"
            android:onClick="ln_sl"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sr_rcs"
            android:textSize="@dimen/lang_font"
            android:text="@string/serbian_rCS"
            android:layoutDirection="locale"
            android:onClick="ln_srrcs"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sr_rsp"
            android:textSize="@dimen/lang_font"
            android:text="@string/Serbian_rSP"
            android:layoutDirection="locale"
            android:onClick="ln_srrsp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sv"
            android:textSize="@dimen/lang_font"
            android:text="@string/swedish"
            android:layoutDirection="locale"
            android:onClick="ln_sv"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ta"
            android:textSize="@dimen/lang_font"
            android:text="@string/tamil"
            android:layoutDirection="locale"
            android:onClick="ln_ta"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/te"
            android:textSize="@dimen/lang_font"
            android:text="@string/telugu"
            android:layoutDirection="locale"
            android:onClick="ln_te"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/th"
            android:textSize="@dimen/lang_font"
            android:text="@string/thai"
            android:onClick="ln_th"
            android:layoutDirection="locale" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tr"
            android:textSize="@dimen/lang_font"
            android:text="@string/turkish"
            android:layoutDirection="locale"
            android:onClick="ln_tr"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ur"
            android:textSize="@dimen/lang_font"
            android:text="@string/urdu"
            android:layoutDirection="locale"
            android:onClick="ln_ur"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vi"
            android:textSize="@dimen/lang_font"
            android:text="@string/vietnamese"
            android:layoutDirection="locale"
            android:onClick="ln_vi"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/zh_rcn"
            android:textSize="@dimen/lang_font"
            android:text="@string/chinese_rCN"
            android:layoutDirection="locale"
            android:onClick="ln_zhrcn"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/zh_rtw"
            android:textSize="@dimen/lang_font"
            android:text="@string/chinese_rTW"
            android:layoutDirection="locale"
            android:onClick="ln_zhrtw"/>

    </RadioGroup>

    </ScrollView>
</LinearLayout>
